<resources>
    <string name="app_name">FinalYearProject117477692</string>
    <string name="convert">Convert</string>
    <string name="enter_distance">Enter Distance</string>
    <string name="convert_to">Convert To:</string>
    <string-array name="Distance_Type">
        <item>Please Select</item>
        <item>Kilometres</item>
        <item>Miles</item>
    </string-array>

    <!--to toggle the open close button
        of the navigation drawer-->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

    <!--Covid strings-->
    <string name="ireland_s_statistics">Ireland\'s Statistics</string>
    <string name="cases">Cases</string>
    <string name="_0">0</string>

    <string name="recovored">Recovored</string>

    <string name="critical">Critical</string>

    <string name="covid_update_ireland">Covid Update Ireland</string>
    <string name="affected_countries">Affected Countries</string>

    <string name="today_deaths">Today Deaths</string>
    <string name="active">Active</string>
    <string name="today_cases">Today Cases</string>
    <string name="total_deaths">Total Deaths</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="join_group">Join Group</string>
    <string name="go_to_group">Go to Group</string>
    <string name="title_activity_maps">Map</string>
</resources>