<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Covid">

    <!--  Displaying our json data in a cardview with embedded textviews-->

    <androidx.cardview.widget.CardView
        android:layout_width="364dp"
        android:layout_height="401dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="20dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="401dp">

            <com.leo.simplearcloader.SimpleArcLoader
                android:id="@+id/loader"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerInParent="true"
                android:visibility="visible"
                app:arc_style="simple_arc" />


            <ScrollView
                android:id="@+id/scrollStats"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/ireland_s_statistics"
                        android:textAllCaps="true"
                        android:textSize="28sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="20dp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="25dp"
                        android:layout_marginBottom="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/cases"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/tvCases"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/_0"

                            android:textAlignment="textEnd"

                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="25dp"
                        android:layout_marginBottom="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/recovored"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/tvRecovered"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/_0"
                            android:textAlignment="textEnd"

                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="25dp"
                        android:layout_marginBottom="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/critical"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/tvCritical"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/_0"

                            android:textAlignment="textEnd"

                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="25dp"
                        android:layout_marginBottom="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/active"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/tvActive"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/_0"

                            android:textAlignment="textEnd"

                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="25dp"
                        android:layout_marginBottom="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/today_cases"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/tvTodayCases"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/_0"

                            android:textAlignment="textEnd"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="25dp"
                        android:layout_marginBottom="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/total_deaths"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/tvTotalDeaths"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/_0"

                            android:textAlignment="textEnd"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="25dp"
                        android:layout_marginBottom="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/today_deaths"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/tvTodayDeaths"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/_0"

                            android:textAlignment="textEnd"

                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </RelativeLayout>


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp" />

                </LinearLayout>

            </ScrollView>

        </RelativeLayout>


    </androidx.cardview.widget.CardView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_navigation"
        android:itemBackground="@color/black"
        app:itemTextColor="@drawable/selector"
        app:itemIconTint="@drawable/selector"
        app:menu="@menu/menu_navigation"
        android:layout_alignParentBottom="true">

    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="120dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="123dp"
        android:text="@string/covid_update_ireland"
        android:textStyle="bold"
        android:textSize="24sp" />

</RelativeLayout>